课后学习资料/Killer Shell - CKS Simulator Kubernetes 1.19/question11_secrets_in_etcd.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-green
