课后学习资料/Killer Shell - CKS Simulator Kubernetes 1.19/answer_question10_container_runtime_sandbox_gVisor.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: gvisor-test
  name: gvisor-test
spec:
  nodeName: ubuntu-k8s-node1 # add
  runtimeClassName: gvisor   # add
  containers:
  - image: nginx:1.19.2
    name: gvisor-test
