课后学习资料/Killer Shell - CKS Simulator Kubernetes 1.19/answer_question14_syscall_activity.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-yellow

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-kill
  namespace: team-yellow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-kill
  template:
    metadata:
      labels:
        app: httpd-kill
    spec:
      containers:
      - name: httpd
        image: httpd:2.4
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh", "-c", "while :; do kill; sleep 30 ; done"]
        ports:
        - containerPort: 80
      nodeSelector:
        kubernetes.io/hostname: ubuntu-k8s-master1
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
