课后学习资料/Killer Shell - CKS Simulator Kubernetes 1.19/question7_open_policy_agent.yaml
---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: blacklistimages
spec:
  crd:
    spec:
      names:
        kind: BlacklistImages
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8strustedimages
      images {
        image := input.review.object.spec.containers[_].image
        not startswith(image, "docker-fake.io/")
        not startswith(image, "google-gcr-fake.com/")
        not startswith(image, "itom-docker.shcartifactory.swinfra.net/")
      }
      violation[{"msg": msg}] {
        not images
        msg := "not trusted image!"
      }
